Fixed sonarqube recommendations